# TelegramBotCuteForCuteV4

./: .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_add_actions_system.py  002_add_gender_fields.py  env.py
bot/: main.py
bot/api/: __init__.py  health.py
bot/core/: commands.py  config.py  logging.py
bot/data/: actions.json
bot/database/: __init__.py
bot/fsm/: admin_states.py  gender_states.py
bot/handlers/: __init__.py  admin.py  callbacks.py  commands.py  gender.py  inline.py
bot/keyboards/: admin_kb.py  gender.py  inline_kb.py  reply_kb.py
bot/middlewares/: database.py  repositories.py  throttling.py
bot/services/: action.py  action_service.py  cache.py  interaction.py  user.py  user_service.py
bot/utils/: conjugator.py  formatters.py  validators.py
docker/: init.sql
scripts/: migrate_actions_to_db.py
