[project]
name = "telegram-bot-cute-for-cute-v4"
version = "1.0.0"
description = "Telegram bot for cute interactions"
requires-python = ">=3.13"

dependencies = [
    "aiogram==3.15.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis==5.2.1",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.1",
    "python-dateutil==2.9.0",
]

[tool.black]
line-length = 100
target-version = ['py313']

[tool.ruff]
line-length = 100
target-version = "py313"
